--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {},
     "description": "Personal theme for Reveal.js-based presentations",
     "devDependencies": {
+        "highlight.js": "9.12.0",
         "reveal.js": "3.6.0",
         "sass": "1.2.0"
     },
