--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "bugs": {
         "url": "https://github.com/mthmulders/personal-reveal-theme/issues"
     },
-    "dependencies": {},
+    "dependencies": {
+        "highlight.js": "9.12.0",
+        "reveal.js": "3.6.0"
+    },
     "description": "Personal theme for Reveal.js-based presentations",
     "devDependencies": {
         "browser-sync": "2.24.4",
@@ -13,8 +16,6 @@
         "gulp-concat": "2.6.1",
         "gulp-debug": "3.2.0",
         "gulp-sass": "4.0.1",
-        "highlight.js": "9.12.0",
-        "reveal.js": "3.6.0",
         "sass": "1.2.0"
     },
     "homepage": "https://github.com/mthmulders/personal-reveal-theme",
@@ -22,6 +23,7 @@
         "reveal.js"
     ],
     "license": "MIT",
+    "main": "personal-theme.css",
     "name": "@mthmulders/personal-reveal-theme",
     "repository": {
         "type": "git",
