--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "author": "Maarten Mulders",
     "bugs": {
-        "url": "https://github.com/mthmulders/personal-reveal-theme/issues"
+        "url": "https://github.com/mthmulders/reveal-theme-im-blue/issues"
     },
     "dependencies": {
         "highlight.js": "9.12.0",
@@ -18,16 +18,16 @@
         "gulp-sass": "4.0.1",
         "sass": "1.2.0"
     },
-    "homepage": "https://github.com/mthmulders/personal-reveal-theme",
+    "homepage": "https://github.com/mthmulders/reveal-theme-im-blue",
     "keywords": [
         "reveal.js"
     ],
     "license": "MIT",
-    "main": "personal-theme.css",
-    "name": "@mthmulders/personal-reveal-theme",
+    "main": "im-blue.css",
+    "name": "reveal-theme-im-blue",
     "repository": {
         "type": "git",
-        "url": "github:mthmulders/personal-reveal-theme"
+        "url": "github:mthmulders/reveal-theme-im-blue"
     },
     "scripts": {
         "build": "gulp build",
