--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,9 @@ jobs:
           name: Deploy preview slide deck
           command: |
             if [ $CIRCLE_BRANCH == $SOURCE_BRANCH ]; then
+              git config --global user.email $GH_EMAIL
+              git config --global user.name $GH_NAME
+              
               git clone $CIRCLE_REPOSITORY_URL ~/out
               cd ~/out
               git checkout $TARGET_BRANCH || git checkout --orphan $TARGET_BRANCH
