Copy the .circle/ folder so gh-pages branch will not build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,12 +47,13 @@ jobs:
             if [ $CIRCLE_BRANCH == $SOURCE_BRANCH ]; then
               git config --global user.email $GH_EMAIL
               git config --global user.name $GH_NAME
-              
+
               git clone $CIRCLE_REPOSITORY_URL ~/out
               cd ~/out
               git checkout $TARGET_BRANCH || git checkout --orphan $TARGET_BRANCH
               git rm -rf .
               cp -Rv ~/repo/preview/* .
+              mkdir -p ~/out/.circleci && cp -a ~/repo/.circleci/. ~/out/.circleci/
 
               git add -A
               git commit -m "Automated deployment to GitHub Pages: ${CIRCLE_SHA1}" --allow-empty
