--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "gulp-concat": "2.6.1",
         "gulp-debug": "3.2.0",
         "gulp-sass": "4.0.1",
+        "natives": "1.1.6",
         "sass": "1.2.0"
     },
     "homepage": "https://github.com/mthmulders/reveal-theme-im-blue",
